# taotie

./: Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml
assets/: juventus.csv
examples/: arrow-serde.rs  ndjson.rs  pq.rs  repl.rs  test.rs
notebooks/: pyproject.toml
notebooks/src/notebooks/: Untitled.ipynb
src/: lib.rs  main.rs
src/backend/: datafusion.rs  describe.rs  mod.rs
src/backend/fusion/: describe.rs  describe2.rs  mod.rs
src/cli/: connect.rs  describe.rs  head.rs  list.rs  mod.rs  schema.rs  sql.rs
