[package]
name = "taotie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
arrow = { version = "52.1.0", features = ["prettyprint"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.13", features = ["derive"] }
crossbeam-channel = "0.5.13"
datafusion = { version = "40.0.0", features = ["serde"] }
parquet = "52.2.0"
polars = { version = "0.41.3", features = ["parquet", "lazy", "sql"] }
reedline-repl-rs = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["rt", "macros", "rt-multi-thread"] }
